--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+	<title>hellow</title>
 </head>
 <body>
-<h3>hello</h3>
-<h4>thanku</h4>
+<div>sometext</div>
 </body>
 </html>
